src/AltaSoft.Simpra/G4/.antlr/SimpraParser.java
// Generated from d:/B7/B7.ISO20022/B7.ISO20022/Simpra/AltaSoft.Simpra/G4/SimpraParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SimpraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, BLOCK_COMMENT=2, BOOLEAN=3, NUMBER=4, PASCALSTRING=5, CSTRING=6, 
		PERCENT=7, ON_OFF=8, NULL=9, WS=10, LET=11, WHEN=12, IF=13, THEN=14, ELSE=15, 
		END=16, RETURN=17, IS=18, IS_NOT=19, NOT_IN=20, IN=21, NOT=22, MIN=23, 
		MAX=24, MATCHES=25, LIKE=26, HAS=27, VALUE=28, AND=29, OR=30, EQ=31, PLUS=32, 
		MINUS=33, MULT=34, DIV=35, IDIV=36, LT=37, LE=38, GT=39, GE=40, LPAREN=41, 
		RPAREN=42, LBRACK=43, RBRACK=44, COMMA=45, DOT=46, IDENTIFIER=47, DIRECTIVE=48, 
		ERROR=49;
	public static final int
		RULE_program = 0, RULE_objectref = 1, RULE_exp = 2, RULE_extraWhen = 3, 
		RULE_block = 4, RULE_statement = 5, RULE_extraIf = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "objectref", "exp", "extraWhen", "block", "statement", "extraIf"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'%'", null, "'null'", null, 
			"'let'", "'when'", "'if'", "'then'", "'else'", "'end'", "'return'", "'is'", 
			"'is not'", "'not in'", "'in'", "'not'", "'min'", "'max'", "'matches'", 
			"'like'", "'has'", "'value'", "'and'", "'or'", "'='", "'+'", "'-'", "'*'", 
			"'/'", "'//'", "'<'", "'<='", "'>'", "'>='", "'('", "')'", "'['", "']'", 
			"','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "BLOCK_COMMENT", "BOOLEAN", "NUMBER", "PASCALSTRING", 
			"CSTRING", "PERCENT", "ON_OFF", "NULL", "WS", "LET", "WHEN", "IF", "THEN", 
			"ELSE", "END", "RETURN", "IS", "IS_NOT", "NOT_IN", "IN", "NOT", "MIN", 
			"MAX", "MATCHES", "LIKE", "HAS", "VALUE", "AND", "OR", "EQ", "PLUS", 
			"MINUS", "MULT", "DIV", "IDIV", "LT", "LE", "GT", "GE", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "COMMA", "DOT", "IDENTIFIER", "DIRECTIVE", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpraParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public BlockContext Main;
		public ExpContext Expr;
		public TerminalNode EOF() { return getToken(SimpraParser.EOF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(18);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(14);
				((ProgramContext)_localctx).Main = block();
				setState(15);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(17);
				((ProgramContext)_localctx).Expr = exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectrefContext extends ParserRuleContext {
		public ObjectrefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectref; }
	 
		public ObjectrefContext() { }
		public void copyFrom(ObjectrefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ObjectrefContext {
		public Token Identifier;
		public TerminalNode IDENTIFIER() { return getToken(SimpraParser.IDENTIFIER, 0); }
		public IdentifierContext(ObjectrefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitIdentifier(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MemberAccessContext extends ObjectrefContext {
		public ObjectrefContext Object;
		public Token PropertyName;
		public ObjectrefContext objectref() {
			return getRuleContext(ObjectrefContext.class,0);
		}
		public TerminalNode DOT() { return getToken(SimpraParser.DOT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimpraParser.IDENTIFIER, 0); }
		public MemberAccessContext(ObjectrefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterMemberAccess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitMemberAccess(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IndexAccessContext extends ObjectrefContext {
		public ObjectrefContext Object;
		public ExpContext Index;
		public ObjectrefContext objectref() {
			return getRuleContext(ObjectrefContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(SimpraParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(SimpraParser.RBRACK, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public IndexAccessContext(ObjectrefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterIndexAccess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitIndexAccess(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionCallContext extends ObjectrefContext {
		public Token FunctionName;
		public TerminalNode LPAREN() { return getToken(SimpraParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SimpraParser.RPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimpraParser.IDENTIFIER, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpraParser.COMMA, i);
		}
		public FunctionCallContext(ObjectrefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitFunctionCall(this);
		}
	}

	public final ObjectrefContext objectref() throws RecognitionException {
		return objectref(0);
	}

	private ObjectrefContext objectref(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ObjectrefContext _localctx = new ObjectrefContext(_ctx, _parentState);
		ObjectrefContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_objectref, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new IdentifierContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(21);
				((IdentifierContext)_localctx).Identifier = match(IDENTIFIER);
				}
				break;
			case 2:
				{
				_localctx = new FunctionCallContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(22);
				((FunctionCallContext)_localctx).FunctionName = match(IDENTIFIER);
				setState(23);
				match(LPAREN);
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 151741198766712L) != 0)) {
					{
					setState(24);
					exp(0);
					}
				}

				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(27);
					match(COMMA);
					setState(28);
					exp(0);
					}
					}
					setState(33);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(34);
				match(RPAREN);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(45);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new MemberAccessContext(new ObjectrefContext(_parentctx, _parentState));
						((MemberAccessContext)_localctx).Object = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_objectref);
						setState(37);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						{
						setState(38);
						match(DOT);
						setState(39);
						((MemberAccessContext)_localctx).PropertyName = match(IDENTIFIER);
						}
						}
						break;
					case 2:
						{
						_localctx = new IndexAccessContext(new ObjectrefContext(_parentctx, _parentState));
						((IndexAccessContext)_localctx).Object = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_objectref);
						setState(40);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						{
						setState(41);
						match(LBRACK);
						setState(42);
						((IndexAccessContext)_localctx).Index = exp(0);
						setState(43);
						match(RBRACK);
						}
						}
						break;
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpContext extends ParserRuleContext {
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	 
		public ExpContext() { }
		public void copyFrom(ExpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NullContext extends ExpContext {
		public TerminalNode NULL() { return getToken(SimpraParser.NULL, 0); }
		public NullContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterNull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitNull(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BinaryAndContext extends ExpContext {
		public ExpContext Left;
		public ExpContext Right;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode AND() { return getToken(SimpraParser.AND, 0); }
		public BinaryAndContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterBinaryAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitBinaryAnd(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnaryContext extends ExpContext {
		public ExpContext Expression;
		public Token Operator;
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode NOT() { return getToken(SimpraParser.NOT, 0); }
		public TerminalNode MINUS() { return getToken(SimpraParser.MINUS, 0); }
		public TerminalNode PERCENT() { return getToken(SimpraParser.PERCENT, 0); }
		public UnaryContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterUnary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitUnary(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ChainedComparisonContext extends ExpContext {
		public ExpContext Expression;
		public Token LeftOperator;
		public ExpContext Left;
		public Token RightOperator;
		public ExpContext Right;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode AND() { return getToken(SimpraParser.AND, 0); }
		public TerminalNode OR() { return getToken(SimpraParser.OR, 0); }
		public List<TerminalNode> LT() { return getTokens(SimpraParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(SimpraParser.LT, i);
		}
		public List<TerminalNode> GT() { return getTokens(SimpraParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(SimpraParser.GT, i);
		}
		public List<TerminalNode> LE() { return getTokens(SimpraParser.LE); }
		public TerminalNode LE(int i) {
			return getToken(SimpraParser.LE, i);
		}
		public List<TerminalNode> GE() { return getTokens(SimpraParser.GE); }
		public TerminalNode GE(int i) {
			return getToken(SimpraParser.GE, i);
		}
		public ChainedComparisonContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterChainedComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitChainedComparison(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CStringContext extends ExpContext {
		public TerminalNode CSTRING() { return getToken(SimpraParser.CSTRING, 0); }
		public CStringContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterCString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitCString(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PascalStringContext extends ExpContext {
		public TerminalNode PASCALSTRING() { return getToken(SimpraParser.PASCALSTRING, 0); }
		public PascalStringContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterPascalString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitPascalString(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArrayContext extends ExpContext {
		public TerminalNode LBRACK() { return getToken(SimpraParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(SimpraParser.RBRACK, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpraParser.COMMA, i);
		}
		public ArrayContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitArray(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParenthesisContext extends ExpContext {
		public ExpContext Expression;
		public TerminalNode LPAREN() { return getToken(SimpraParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SimpraParser.RPAREN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ParenthesisContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterParenthesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitParenthesis(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhenContext extends ExpContext {
		public ExpContext Condition;
		public ExpContext ExpressionTrue;
		public ExpContext ExpressionFalse;
		public TerminalNode WHEN() { return getToken(SimpraParser.WHEN, 0); }
		public TerminalNode THEN() { return getToken(SimpraParser.THEN, 0); }
		public TerminalNode END() { return getToken(SimpraParser.END, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(SimpraParser.ELSE, 0); }
		public List<ExtraWhenContext> extraWhen() {
			return getRuleContexts(ExtraWhenContext.class);
		}
		public ExtraWhenContext extraWhen(int i) {
			return getRuleContext(ExtraWhenContext.class,i);
		}
		public WhenContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterWhen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitWhen(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ExpContext {
		public TerminalNode NUMBER() { return getToken(SimpraParser.NUMBER, 0); }
		public NumberContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitNumber(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BoolContext extends ExpContext {
		public TerminalNode BOOLEAN() { return getToken(SimpraParser.BOOLEAN, 0); }
		public BoolContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitBool(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComparisonContext extends ExpContext {
		public ExpContext Left;
		public Token Operator;
		public ExpContext Right;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode LT() { return getToken(SimpraParser.LT, 0); }
		public TerminalNode GT() { return getToken(SimpraParser.GT, 0); }
		public TerminalNode LE() { return getToken(SimpraParser.LE, 0); }
		public TerminalNode GE() { return getToken(SimpraParser.GE, 0); }
		public ComparisonContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitComparison(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BinaryOrContext extends ExpContext {
		public ExpContext Left;
		public ExpContext Right;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode OR() { return getToken(SimpraParser.OR, 0); }
		public BinaryOrContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterBinaryOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitBinaryOr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BinaryContext extends ExpContext {
		public ExpContext Left;
		public Token Operator;
		public ExpContext Right;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode MULT() { return getToken(SimpraParser.MULT, 0); }
		public TerminalNode IDIV() { return getToken(SimpraParser.IDIV, 0); }
		public TerminalNode DIV() { return getToken(SimpraParser.DIV, 0); }
		public TerminalNode PLUS() { return getToken(SimpraParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(SimpraParser.MINUS, 0); }
		public TerminalNode MIN() { return getToken(SimpraParser.MIN, 0); }
		public TerminalNode MAX() { return getToken(SimpraParser.MAX, 0); }
		public TerminalNode IS_NOT() { return getToken(SimpraParser.IS_NOT, 0); }
		public TerminalNode IS() { return getToken(SimpraParser.IS, 0); }
		public TerminalNode NOT_IN() { return getToken(SimpraParser.NOT_IN, 0); }
		public TerminalNode IN() { return getToken(SimpraParser.IN, 0); }
		public TerminalNode LIKE() { return getToken(SimpraParser.LIKE, 0); }
		public TerminalNode MATCHES() { return getToken(SimpraParser.MATCHES, 0); }
		public BinaryContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterBinary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitBinary(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ObjectRefContext extends ExpContext {
		public ObjectrefContext objectref() {
			return getRuleContext(ObjectrefContext.class,0);
		}
		public ObjectRefContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).enterObjectRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpraParserListener ) ((SimpraParserListener)listener).exitObjectRef(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_exp, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NULL:
				{
				_localctx = new NullContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(51);
				match(NULL);
				}
				break;
			case BOOLEAN:
				{
				_localctx = new BoolContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(52);
				match(BOOLEAN);
				}
				break;
			case NUMBER:
				{
				_localctx = new NumberContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(53);
				match(NUMBER);
				}
				break;
			case CSTRING:
				{
				_localctx = new CStringContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(54);
				match(CSTRING);
				}
				break;
			case PASCALSTRING:
				{
				_localctx = new PascalStringContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(55);
				match(PASCALSTRING);
				}
				break;
			case LBRACK:
				{
				_localctx = new ArrayContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				match(LBRACK);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 151741198766712L) != 0)) {
					{
					setState(57);
					exp(0);
					}
				}
